# mylabs

./: Converter.pro.user.32aee71  appcontext.h  entrypoint.cpp  entrypoint.h  logic.cpp  logic.h  mainwindow.h
OOPlab1/: CMakeLists.txt  main.cpp
OOPlab1/Exceptions/: BadAmountOfVertices.h  BadIndexForDeletion.h  BadInputType.h  BadShapeName.h  BadShapeNumberForDeletion.h  EmptyList.h  EmptyListForDeletion.h  EmptyListForShowing.h  EmptyListForSorting.h  EmptyListForSumming.h  InterfaceOptionException.h  ShapeExistanceException.h
OOPlab1/Interface/: Interface.cpp  Interface.h
OOPlab1/Point/: Point.cpp  Point.h
OOPlab1/Shape/: Shape.h
OOPlab1/Shape/Circle/: Circle.cpp  Circle.h
OOPlab1/Shape/Polygon/: Polygon.cpp  Polygon.h
OOPlab1/Shape/Rectangle/: Rectangle.cpp  Rectangle.h
OOPlab1/Shape/Triangle/: Triangle.cpp  Triangle.h
OOPlab2/: CMakeLists.txt  main.cpp
OOPlab2/Errors/: EmptyListError.h  Errors.h  IndexError.h  InvalidSize.h
OOPlab2/Iterator/: Iterator.h
OOPlab2/List/: List.h
OOPlab2/Node/: Node.h
OOPlab2/OldTesting/: OldTesting.cpp  OldTesting.h
OOPlab2/Testing/: Testing.cpp  Testing.h
OOPlab3/: calculator.h  mainwindow.ui  translator.cpp  translator.h
OPlab1/: Converter.pro  appcontext.h  entrypoint.cpp  entrypoint.h  errors.h  errorslib.cpp  errorslib.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OPlab2/: appcontext.h  error.h  errors.h  lab2.pro  list.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OPlab3/: appcontext.h  graphicwindow.cpp  graphicwindow.h  graphicwindow.ui  lab3.pro  list.cpp  list.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.ui
